# ChangeLog for app-admin/systemrescuecd-x86
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/systemrescuecd-x86/ChangeLog,v 1.5 2015/03/01 17:47:55 mgorny Exp $

*systemrescuecd-x86-4.5.1 (01 Mar 2015)

  01 Mar 2015; Michał Górny <mgorny@gentoo.org>
  +systemrescuecd-x86-4.5.1.ebuild:
  Version bump.

*systemrescuecd-x86-4.5.0 (05 Feb 2015)

  05 Feb 2015; Justin Lecher <jlec@gentoo.org>
  +systemrescuecd-x86-4.5.0.ebuild, metadata.xml:
  Version Bump

  07 Jan 2015; Michał Górny <mgorny@gentoo.org> systemrescuecd-x86-4.4.1.ebuild:
  Mention amd64 in description.

  07 Jan 2015; Michał Górny <mgorny@gentoo.org> systemrescuecd-x86-4.4.1.ebuild:
  Fix pkg_postrm() wrt Portage bug #535870.

*systemrescuecd-x86-4.4.1 (06 Jan 2015)

  06 Jan 2015; Michał Górny <mgorny@gentoo.org> +metadata.xml,
  +systemrescuecd-x86-4.4.1.ebuild:
  Introduce an ebuild to maintain a fresh copy of systemrescuecd-x86.