@@ -4,27 +4,29 @@ Hash: SHA256
 DIST systemrescuecd-x86-4.4.1.iso 413272064 SHA256 358253bf8d88b10be49f5485bf00e6cffea4f38ce635fe0d9f798803edf53d9e SHA512 5c5045df219181064201dda195961096da9722d3d5758dcb111c2c74ed083b3464f314340c01a5a27a920c33bd5bc95efee2efa1edc2405a0d11d9bc67e4b2a5 WHIRLPOOL b834a7a985a85909e9f99441407df78a06ee2c508e3d2020c5c4045cf35e3462f0fba58b888d150f22c0d23daf0d866d4fa93ba4bb6252ab7b502c390824e6ef
 DIST systemrescuecd-x86-4.5.0.iso 439603200 SHA256 47279ea1bd1f904fd7973a88ad74e749d46e6fbca4e9a8fc0fc110d4181721f9 SHA512 e821876cb6f58d5eaeba35c91c60503e81c04c50b3c496e4144c8dc459c6e78aece9b7e7a3ca35ce427e0965c197758b2267909bcdf95f6a19221898fdbc91b2 WHIRLPOOL 3d7ab635ca5dcb2d13d02d5597905434d11da8d441e132d2baae795dcccd42f706d0eaef1f266b1f4a8dea4242bfa225291d8d7f793e619f4fb26f9144c8bc0f
 DIST systemrescuecd-x86-4.5.1.iso 443541504 SHA256 4fda2fce55a46c7b258fba10c88a4a337821c8b801a8cd3c344cc223a9c4436d SHA512 561fa30404a7a41a1fcb0cc24c1a5eea407de1c2d2f1bd5273e2acd471986ab8587df9f9b3ff364617f81a351cdedd12c6859b53b1f7e430867c654fd136a524 WHIRLPOOL d266518c6898f9163341eaa671ce8367ea2e836e959806e65095e8de34d72cefaec576a640fcca53811b01bfd4e45b6d69a8a3da6191dca320709b542fd9ff3d
+DIST systemrescuecd-x86-4.5.2.iso 456060928 SHA256 e8805433699acd7b6df38ff893eddad8c6f287a09cc34be3f6fef46d3e5056c4 SHA512 b27223b08032f0132f81204a244638262cf70348a1a299e5bf63971db556d604e52d8c3408e3943c305eac887c2e38ed6d2b1488633595c9f8c1cc087162f911 WHIRLPOOL 0c304b5622e0079746128832133b7f554b8dd6536b447d399da150539c6425ed6ec6aaaef4d3d034ff9a6e814812f9f0ac3383b07f83f13ede9e00d917f2ad5b
 EBUILD systemrescuecd-x86-4.4.1.ebuild 1491 SHA256 75e19bda38bb268a3de2a96e232ae5826fdabbcfd3b758d779b591264bb23d48 SHA512 f6bcd8b55d83ea073e64e895df6e4e244679bacfbc6b6da24d6b21f644c9e784fc2016063610dd61daac84c58e89f4fff35cbd7adfa796206ad0607daf37bcf2 WHIRLPOOL 7a5d93beb13d85971e0e467e5c01d656e0e1d2f45554ba151eeed7ee7195cb0a2c432df8d23804391b0e00959490f402658f2c5a2e9f00bdb6d6bd3931152a83
 EBUILD systemrescuecd-x86-4.5.0.ebuild 1489 SHA256 d33df4c37995811fe1d870cbcbc9881e85ca05cb073b5dd8dd8aa0d13caae83f SHA512 20ce113e7fa1adf4a9cf2724f06ab5c737a983094f49f9e6616bfcc9e0066d93d6785cb5e556c86e6bb77e0570be1d1e075fef6bbd69dd8cac5b01246272d833 WHIRLPOOL a06bd5b8849f0ab5239d000be572efd48339dfc49cd563b68dc8330a4d50ddbadfe110e98c25def28dfe056b657e6f293b8e470e04927c35bd631111d913803d
 EBUILD systemrescuecd-x86-4.5.1.ebuild 1491 SHA256 860780b601e4adb9264cd299d22b6827a86d2e18b4c52f8ca966da5ee8b5779e SHA512 a8e77b55d252bac75b8bcc1ef9646cfcdfde6516225b9be13dfe893250b067b781e8444eecbc5c4043e6330a19ccb8f8376ce8ff4c8979944b20d3a9a51383e3 WHIRLPOOL 0d7433604e5a7019a250de3eff46db0003a6794b1b069099c355c6eecb161eae1d8846d5dd0d895cf3bc7d9774d0bf9b296897663c0299afa49fa17a9dd32e54
-MISC ChangeLog 983 SHA256 539f539bcef4097a1c9f7768a16bfd84805aa32acf7b3057618e02411bda70a0 SHA512 0745e3034ac6a57145f7a107d425d5aa9288a06ea1c5dfcb421f306ca06f601fb7724ef24ac11a1868011915f1d7b6cf3d66a3cb01fb267ce6a68d322d069511 WHIRLPOOL 9e2331fc43ca167a80c8eb996390abfd68f4bfbf500fbf755194a2fcd331474a1d6e244dac8e59043852f436a57cf2723a737254458bae866f4092d8dbc96cb0
+EBUILD systemrescuecd-x86-4.5.2.ebuild 1491 SHA256 5915f28b6f7bd667e9f7d71cff455c2a5cb5534d448a280ab93b74dfc3f29bf7 SHA512 1ae5ab83797fab26e4a668afdb56abcc4106a8f7c98f9977220b2693b1b191aeded332d60200b99580a902c2b07d2328ef6bcce27fcaf6b79af80f2129577ec5 WHIRLPOOL e4ed901356ae1bb39f0eef37301108e4185764015c339b2f60b910c5e588c8cbaf4b6646579620139f42011849bc661beea578d13a6b382fc3ce5f7b0f2bbcc2
+MISC ChangeLog 1127 SHA256 c609257aeb6e86b44da78dfdeab7d6aaa1d180dc6cb51753bf121bc79acc53f6 SHA512 819e58de5a668732d1cf0f8b1cbdf9088f0ba2a15e4567ecc2547b4f234c7cf3928688f5946b1e0a0a513a1178b8ac261c25566d2cb4d58e383128ed96fb206d WHIRLPOOL 45ef39fd887fce52593c23b8fa8b13d3910417786b576ad2f601fb173260816804644db98243622c69fc9935a91ebc9c0e3f01845a2ce21891a5d8efceacb288
 MISC metadata.xml 239 SHA256 39b0418e27a73751bdaf44750f5fab5608927129dd36d377223a9b46789b87a7 SHA512 95530e16efd11ef8b18ee2363280ba56bbb4dbc285b43fce80f1a7054eadd42fbf290cf86c8b2fca548a0ae1cfac419b2cf32ad1fcbb940b788222fb3f0ab817 WHIRLPOOL 2a4a2b3fe0ecef68cdeaaac08372c0d60b9a3242d141f4974eaecf9ea92bafa802168052cf61f18377f523146ff57d37736bf037facaf8f02b4e0142505ce288
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU81DNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVHtA3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOQskP/jbIdovp6yp1btRF+WZi5JMd
-+YSFtnnVOaqC48mgghfuODoTDEYiP9sTexmsPSP2ype/choe5LDhHBoDnVRXv3Sf
-r9wySXESvXZFS8Tly6yVpRXUKBRqf85OQAwM+VIEQZeJPOmp5Ic56YYdhNjKLVlv
-gny7tsLrCnU8iayKeX2c2v5XFyT65l+AUoXgZ/FL6j9JsOKXpkZj8ArYheRE0Xf6
-iX9rYd8BkV4Km3x+YvkX5Zydf3FhfrLXPrUjNtm6jikLnki//MIkK2LtM637MPBf
-q5/bTyQTZELa72z25s0u3owivr041xeDUPH9Uenn3/srTP39dHUNtQ8WbDEUvI6+
-wUpeawo2mpT4+Xfex9Q/i+PRwFGd/NBKzFjVbaVGvf5HaezwjQkyb2BMkQMcxq+Z
-yO/06Zj6ZlTT/7dOkDRpbl83jyidixXS0oUvJMOfNgLlZiuq5NMzoFrat8abBnWW
-1P534EOS3HQWznDHkjkllqy+OLc6d8kGXfSkY1Ph6iaZqd3ABrbYps5/RMTHtUwB
-GBz38RTarz6NGXwF3NBQ4X3QlkCBmQpZLWDgFVjcCJ6qbXfsnASI7x5e0ieAsP5D
-B9SgVdHHLOAM92lnO3MCO3UBtPseQ/WRJJj/eGKZJeigBF3yNr+8/0Wy4I0VXKBZ
-+02Xxwz9zDzYgrEL96f4
-=/6yX
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOnYIP/2O6Lry04cAHS9Z6oZTptJu+
+UhAcrIAlfCP+CbUZrt39bE+fDQuLgW/kdBLGzoM7qgzbzZEzM2HqIDOzzHBAC5Hf
+CxUiON36PZf8bUnhujX4cRzQqwBEbiaaacY4B222IRN81TvXEU5Rvo07W4Vxxrj8
+02VSBVgDJjd4r6Epx0Fu+ON4X/qGw1a3lAl3WW/coVki5501HmhC8HiqbEX2xI6k
+ZRjaYF8NYmgQZ7R1VVeLVunAra9movF0sLT07gGq7ly0X0fWhEjZsn5YFQPYW4DZ
+gB3Px29t6Ni5wel30mXC2uP2Wc8JLa39ClutiXxqAmb66DJfUvMT2B7faVTy2G9g
+aRJkdsYn51rCFmvVPNx/DHDAyz4U1JY8zsXRRDLbT6r2wmKfXXm7ZuaXTc8wL0FQ
+l2ZZ7oyubU2wCP4AK0V7Xj4FaS45q2uXIOqw7VC8BhGMAMv0+fnl8uHfZfohV6Fz
+5mMW9s2u/Cxb1XC9N1o/gjQBMSDnENTSo9bqx8sD/wm/NhEdfKCPoKvmprQimcWM
+Bp6mvJ0CLMyXe9vwf+7vXSLtVnSmPOgJxI4QBwcViCbdtCerI9vQDufVwkYAT3fJ
+d0pq65yTCIUZ4xcw0HdjO+ZDg2j4bwAq2RSU9554aD3AsYC9nOlBVrLX3q3EVeGz
+vvQuf9Mi/bj6cmcoOTKW
+=fapr
 -----END PGP SIGNATURE-----
