@@ -3,14 +3,26 @@ Hash: SHA256
 
 AUX facter-1.7.1-fix-proc-self-status.patch 1512 SHA256 0356f87b54afc8795b8042979e1278f74d5249ca0d4254eac051c0decd8b4032 SHA512 20c9eae6d868c9ea0886a27ed02a006bb3558d9ca47635da6882e9f9d6203e321b274d7addc01490c95165bb1e9ef06d0c6b34f67d445f35d1104bc58d5bcc69 WHIRLPOOL ac31579045f582e58e1fab2a9c846df8b2ddd85474174d6350afc6a29b4704f3e5b3c0b6e64b112053ff4505bb7094ecfdb7d0669ea843c1635d94a23b0eeda1
 DIST facter-2.4.1.gem 236544 SHA256 4c8836066378d387c0561e4c3574865fa10d85d7474d472b049ecc7d5e4c67fa SHA512 5690f059961ba981d2e174f45ebdbb4e9b75aad3599cbc896f1c3d25f9b12c36500e09be70c36ebf27aed602c22d811604c344c7ccc71ecb200d4aeb78f28a4b WHIRLPOOL 1b6b4079b0449c646e06e9fd868b1de29a61facdacea956b032fbbef94e8c4c85594f50021b3f78a3668c5a0f6d29c448bd97c34fdb8a215de2ee74b164af6fd
+DIST facter-2.4.3.gem 245760 SHA256 3c1e49c32e6b07c1f802ec120e860f882938a5057c6f3733594b7ff8a80ee58f SHA512 a834c50d0ac14a751ccd0d5da3f8d64a83173e82991e2a3cd70bf47c023ee0b0517baed3726398a1075043b1237a91cc8389d58acbb2bbf79c76b5e2ecd3aedb WHIRLPOOL daa82ef6b2f6eb2f640a106528e67f5631748ee4232fbe9c595146b25ac6ca01048d3fc7a5cf519469bec597b6cc6dc6a4d6b2b779b7c77972fbb8efc952c32b
 EBUILD facter-2.4.1-r1.ebuild 2024 SHA256 f37ed369296f224df670c458da18e30cbca4e52a5c7e0bcf5c92514b24c8d24a SHA512 26f8dbf4f0d68ac5efc16810e00fe9d966eb9aab2d41a3ac931352c765b2202d412b4a2679004ca5a7b102afafad9e4e6557908ae6a2519a4cafdf6236350c75 WHIRLPOOL 1dec4b7ff6a06a4cf5a508b621cf6b88b54b3262dc421e012d96e8be5abe3a011a0702745fdbfb4cac5ef00aa940b79b14777433cdce6e7fbbc8c469b1e329c3
 EBUILD facter-2.4.1.ebuild 2007 SHA256 7f12da8e2622df478b96fe039e216267fb137009acfb38cf2823bcc484a6c619 SHA512 62c762177540bf0cd0cb4b2da69769bd343615d0d11dcb7fb45416aec5a4a0f3caf6136835ad80fb6705c26e139aec926af2d7353c9ca930aeb8c233b15cf586 WHIRLPOOL 5c77bcdad4f71fe79fc700a90c3c9b80677a871298a2963f6b8db339ed0b46e371e710e3396b17c67fcc177ed3368009155c959cdfa4ffde492cb3cde5fc76f5
-MISC ChangeLog 17772 SHA256 d717c7c9695b5644e64d304ecf1ec5ec413ac506b35ce39b235bd70ab7524808 SHA512 a1bbbe3c0daa50a804bbdaf982720fea53dddbce584fa1a922e907096a7dae50d54cd0ed0d21ae878604b64a4486da1f7bdd0af32b23f4fc7a50d60b5465910e WHIRLPOOL 3d229b8081008d33d72f7d852bda5cf39b31513f8e90d60ef43197b46dbe44a1ba0b21ee4c029e47eb4fd15df40617c66266071aa732b8f1b46b4d5972a4e60d
+EBUILD facter-2.4.3.ebuild 2029 SHA256 bf133c565778f403b11c0b6c4d0881371d9c57a35b1d53e32f5584682d18021e SHA512 8d38a06a93991a146bb9ef3f14bd6d029065000c4fb0545e92c20f9f842b3bf01e20902f47ba8be3b576d084db0e3f15e8a25a12035a2fbbed3fa670cca01446 WHIRLPOOL 282eb4173b125edac92ce88ec38fe132f543dd75f53f544de3ed8c7b0c5c1ea96d49b7c4fcf6b53c1d4d408713448c0b7f309759c38efb330827993a04adfa61
+MISC ChangeLog 17895 SHA256 4575f22d7b595bb7060d6c53af7d36d8da972f8fe4af210d22002407f06519a7 SHA512 ac0ffdc3ae32da82ebe67c16fda5e65617434e27399309d2f6cb30c6ce1c45a5da8a172712562c1768c80345078a627313ac502133876e19c1f4817f4b48de90 WHIRLPOOL 3b09c5e95699f336599be96f93d03499cb9485f3afbc99b66fdbaff5120026d66b1f4aaada85f0cc3e070a054326ff9048313cfdbd2ddb2d5a742c6e89fb11b1
 MISC metadata.xml 568 SHA256 42e1960b3fa66b2bdbc939c389c59eca3c00736b3f88e8aefa4ffb85fdab8685 SHA512 92bc2c3743019e44faea40dd4dba228cabd7945c98bd07e8c5465347928a37e9e12fff8d84db5480fecdc8d8e29f84a5765b0baebaab6b00d4a4246a6968dca5 WHIRLPOOL e00bdad66ad8a155d9f071c551ac093641fb7f51646d2e20ca0baf357ffd2e4cd86f1774764d143432f92f4a7296a7ddddd96e3205b4b5cfdb4babb58ab5109f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlTrdzkACgkQiIP6VqMIqNfsVgEAllOUzk0ehf22mA6YfAUZLDg5
-0E3hkj/MfwtWOSch5O8A/0AhGIQ/YFKij/KP0f6fxBhcEfHhKHMuvKXDtGvKYT56
-=vXJZ
+iQIcBAEBCAAGBQJVHtRJAAoJEGSje+quGaTo0FYP/RVJlcp6k0oLfYcb7GHUtz95
+Jtjf6JIOcibA5QWBO3y0JHS4Uum7lsY8YxR+G8tB9d7wxXrqMx2exuzVKJdd/RSX
+N+i2r203yO9TWktwgfqrhrmNKQbIDoHXbHu3aDkySsv4I8KRbXz/Gc2oHLqASOLK
+/EQ1F1PN++DiIflbobzo5SBnQMed2CKeyUDxq2jyrogQNaBkAy/wJNkGMHtz1WxA
+8M9Yh4F4jYOK9EdzwrWaVIq8sc4EcYahQsnNfxmNwGfwqQr9eBc3maaFnuGu2BnL
+iD2N1/fXsJbi3Gr93CN3Tq35aXtQ8A+oObdVyNzCEOdTBYml/RN8eymUXP8yCTbr
+gYN6qBq5Oyd/xt3LuUkkmuTfx2IXER/7jSmh9YevxNACXtwaSots6XpwpgTYCpZx
+HBc99Qs86/4imOdxUtYhXrCBzgFcMVnnScruV2Tg1Sm1KyMKukJMjI/esiPZB1Wr
++RtzYvYajBk+xjxY8IlLWaeRZ21URdqxnvCXCcV/SVrLfW/46+Af4x65SV3ogl9S
+u3PAwVWCPuHfDwvCNjt/N/icSNvgfKPbcdo31GFTfM9HsX02yDWCKjc+QyI5YPoX
+dEMzUCxbfMi+l2Qo6uAVuZIdbHQ5cACl86EwolaCgAcWSyzZ/mUlMx9x5VGAdmv5
+2qqKggLoWwAj0izLzD2U
+=TWej
 -----END PGP SIGNATURE-----
