@@ -1,0 +1,10 @@
+DEFINED_PHASES=install postinst postrm
+DESCRIPTION=The .iso image of SystemRescueCD rescue disk, x86 (+ amd64) variant
+EAPI=5
+HOMEPAGE=http://www.sysresccd.org/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RESTRICT=mirror
+SLOT=4.5.2
+SRC_URI=mirror://sourceforge/systemrescuecd/sysresccd-x86/4.5.2/systemrescuecd-x86-4.5.2.iso
+_md5_=40aa91bf25e7829b0760931299f30ee5
