@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/facter
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.129 2015/02/23 18:53:39 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.130 2015/04/03 17:56:24 prometheanfire Exp $
+
+*facter-2.4.3 (03 Apr 2015)
+
+  03 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> +facter-2.4.3.ebuild:
+  bup
 
   23 Feb 2015; Hans de Graaff <graaff@gentoo.org> -facter-1.7.6.ebuild,
   -facter-2.2.0.ebuild:
