@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/systemrescuecd-x86
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/systemrescuecd-x86/ChangeLog,v 1.5 2015/03/01 17:47:55 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/systemrescuecd-x86/ChangeLog,v 1.6 2015/04/03 17:38:58 mgorny Exp $
+
+*systemrescuecd-x86-4.5.2 (03 Apr 2015)
+
+  03 Apr 2015; Michał Górny <mgorny@gentoo.org>
+  +systemrescuecd-x86-4.5.2.ebuild:
+  Version bump.
 
 *systemrescuecd-x86-4.5.1 (01 Mar 2015)
 
